--- a/server/views/taskList/additionalConditionsTask.pug
+++ b/server/views/taskList/additionalConditionsTask.pug
@@ -20,7 +20,7 @@ div.taskListItem
         div.pure-u-1-4.center
             if user.role === 'RO'
                 +startContinueView(licenceStatus.tasks.licenceConditions, "/hdc/licenceConditions/standard/" + prisonerInfo.offenderNo)
-            else if user.role === 'CA' && (licenceStatus.stage === 'DECIDED' || licenceStatus.stage === 'MODIFIED_APPROVAL')
+            else if user.role === 'CA' && (['DECIDED', 'MODIFIED', 'MODIFIED_APPROVAL'].includes(licenceStatus.stage))
                 a.taskListAction.center.button.button-secondary(href="/hdc/licenceConditions/standard/" + prisonerInfo.offenderNo) View/Edit
             else
                 a.taskListAction.center.button.button-secondary(href="/hdc/review/conditions/" + prisonerInfo.offenderNo) View
