--- a/server/views/taskList/reportingInstructionsTask.pug
+++ b/server/views/taskList/reportingInstructionsTask.pug
@@ -10,5 +10,7 @@ div.taskListItem
         div.pure-u-1-4.center
             if user.role === 'RO'
                 +startContinueView(licenceStatus.tasks.reportingInstructions, "/hdc/reporting/reportingInstructions/" + prisonerInfo.offenderNo)
+            else if user.role === 'CA' && ['DECIDED', 'MODIFIED', 'MODIFIED_APPROVAL'].includes(licenceStatus.stage)
+                a.taskListAction.center.button.button-secondary(href="/hdc/reporting/reportingInstructions/" + prisonerInfo.offenderNo) View/Edit
             else
                 a.taskListAction.center.button.button-secondary(href="/hdc/review/reporting/" + prisonerInfo.offenderNo) View
