--- a/server/views/send/dmToCaReturn.pug
+++ b/server/views/send/dmToCaReturn.pug
@@ -9,7 +9,7 @@ block content
 
     div.pure-g.largePaddingBottom
         div.pure-u-2-3
-            h2.heading-large.midPaddingBottom Submit to prison case admin
+            h2.heading-large.midPaddingBottom Submit to the Prison Case Admin
 
     div#continueBtns.pure-g.paddingBottom
         div.pure-u-1
