--- a/server/views/sent/dmToCaReturn.pug
+++ b/server/views/sent/dmToCaReturn.pug
@@ -4,4 +4,4 @@ block content
 
     include ./mixins/sentMixin
 
-    +sentContent('Submitted to prison case admin')
+    +sentContent('Submitted to Prison Case Admin')
