Update conditions summary page wording

--- a/server/views/licenceConditions/conditionsSummary.pug
+++ b/server/views/licenceConditions/conditionsSummary.pug
@@ -8,8 +8,7 @@ block content
 
     div.largePaddingBottom
         if data.licenceConditions && data.licenceConditions.length > 0
-            h2.heading-medium Additional conditions
-            p The additional conditions you have selected are displayed below. You can add more or continue.
+            h1.heading-large Check additional conditions
             div.borderBottomLight
             +additionalConditions('editable')
 
