--- a/server/views/review/includes/additionalConditions.pug
+++ b/server/views/review/includes/additionalConditions.pug
@@ -7,11 +7,10 @@ mixin additionalConditions(editable)
             div.pure-u-18-24.padRight30
                 if condition.group
                     div.heading-small.noMargin.smallPaddingBottom
-                        span.number Condition #{index + 1}
-                        |  -
+                        span.number #{index + 1}.
                         span.title  #{condition.group}
                             if condition.subgroup
-                                |  -- #{condition.subgroup}
+                                | : #{condition.subgroup}
                         if condition.group === 'Bespoke'
                             |  -
                             span.approved
@@ -35,7 +34,7 @@ mixin additionalConditions(editable)
                 div.pure-u-2-24
                 div.pure-u-4-24
                     div
-                        a.link(href="/hdc/licenceConditions/additionalConditions/" + nomisId + "#" + condition.id) Edit condition
+                        a.link(href="/hdc/licenceConditions/additionalConditions/" + nomisId + "#" + condition.id) Change
                     div
                         form(method="post" action="/hdc/licenceConditions/additionalConditions/" + nomisId + "/delete/" + condition.id)
                             input(type="hidden" name="_csrf" value=csrfToken)
