--- a/server/views/curfew/curfewHours.pug
+++ b/server/views/curfew/curfewHours.pug
@@ -73,5 +73,6 @@ block content
                                                 input(name=day+"Until", id=day+"Until" class="form-control", value=data[day + 'Until'] || "07:00", type="time")
                                         div.pure-u-2-3
 
+        include ../includes/roModificationWarning
         include ../includes/saveAndReturn
 
