--- a/server/views/licenceConditions/additionalConditions.pug
+++ b/server/views/licenceConditions/additionalConditions.pug
@@ -50,6 +50,8 @@ block content
                                                     include ./includes/formBuilder
 
         include ./includes/bespokeConditions
+
+        include ../includes/roModificationWarning
         include ../includes/formButtons
 
 block append scripts
