--- a/server/views/licenceConditions/standard.pug
+++ b/server/views/licenceConditions/standard.pug
@@ -32,4 +32,6 @@ block content
                 input#additionalConditionsNo(type="radio" name="additionalConditionsRequired" value="No" checked=additionalConditionsValue === 'No')
                 label(for="additionalConditionsNo") No
 
+        div.paddingTop
+            include ../includes/roModificationWarning
         include ../includes/formSubmit
