--- a/server/views/reporting/reportingInstructions.pug
+++ b/server/views/reporting/reportingInstructions.pug
@@ -41,5 +41,6 @@ block content
                                     label.form-label(for="telephone") Telephone
                                     input#telephone.form-control.small(name="telephone" type="text" value=data.telephone)
 
+        include ../includes/roModificationWarning
         include ../includes/saveAndReturn
 
