--- a/server/views/licenceConditions/includes/appointmentName.pug
+++ b/server/views/licenceConditions/includes/appointmentName.pug
@@ -1,4 +1,18 @@
-div.pure-g
+div.pure-g.paddingBottom
     div.pure-u-3-4
       label(for='appointmentName') Name
       input(type='text' name='appointmentName' id='appointmentName' class='form-control' value=condition.user_submission && condition.user_submission.appointmentName)
+
+
+div.inline
+    div.multiple-choice
+        input(id='psychiatrist' type='radio' name='appointmentProfession' value='psychiatrist' checked=condition.user_submission && condition.user_submission.appointmentProfession === 'Psychiatrist')
+        label(for='psychiatrist') Psychiatrist
+
+    div.multiple-choice
+        input(id='psychologist' type='radio' name='appointmentProfession' value='psychologist' checked=condition.user_submission && condition.user_submission.appointmentProfession === 'Psychologist')
+        label(for='psychologist') Psychologist
+
+    div.multiple-choice
+        input(id='medicalPractitioner' type='radio' name='appointmentProfession' value='medical practitioner' checked=condition.user_submission && condition.user_submission.appointmentProfession === 'Medical practitioner')
+        label(for='medicalPractitioner') Medical practitioner
