Make mandatory field list match fields shown in create licence tasklist

--- a/server/views/pdf/tasks/reportingTask.pug
+++ b/server/views/pdf/tasks/reportingTask.pug
@@ -1,5 +1,5 @@
 
-- var incomplete = incompleteGroups.includes('reporting')
+- var incomplete = incompleteGroups && incompleteGroups.includes('reporting')
 - var buttonState = incomplete ? 'UNSTARTED' : 'DONE'
 
 div.taskListItem.borderBottomLight.largeMarginBottom
