--- a/server/views/pdf/tasks/sentenceInfoTask.pug
+++ b/server/views/pdf/tasks/sentenceInfoTask.pug
@@ -1,5 +1,5 @@
 
-- var incomplete = incompleteGroups.includes('sentence')
+- var incomplete = incompleteGroups && incompleteGroups.includes('sentence')
 
 div.taskListItem.borderBottomLight.largeMarginBottom
     h2.heading-medium Sentence dates and offender information
