--- a/server/views/pdf/tasks/taggingTask.pug
+++ b/server/views/pdf/tasks/taggingTask.pug
@@ -1,5 +1,5 @@
 
-- var incomplete = incompleteGroups.includes('monitoring')
+- var incomplete = incompleteGroups && incompleteGroups.includes('monitoring')
 - var buttonState = incomplete ? 'UNSTARTED' : 'DONE'
 
 div.taskListItem.borderBottomLight.largeMarginBottom
