Adjust pre-submit summary views

--- a/server/views/review/includes/curfewAddress.pug
+++ b/server/views/review/includes/curfewAddress.pug
@@ -23,7 +23,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
-        span Main occupier details
+        span Main occupier
     div.pure-u-1-2
         div.pure-g
             if typeof errors.occupier === 'string'
