--- a/server/views/review/includes/reportingInstructions.pug
+++ b/server/views/review/includes/reportingInstructions.pug
@@ -6,7 +6,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
         div.pure-g
             div.pure-u-3-4
-                span Name of person
+                span Name
     div.pure-u-1-2
         div.pure-g
             div.pure-u-2-3
