--- a/server/views/includes/personalDetailsSummary.pug
+++ b/server/views/includes/personalDetailsSummary.pug
@@ -2,10 +2,10 @@ if Object.keys(prisoner).length > 0
     div.borderTopLight.borderBottomLight.midPaddingTopBottom
         ul.inlineList.padRight30.block
             li.padRight30 Name&nbsp;&nbsp;
-                span.bold #{prisoner.firstName} #{prisoner.lastName}
+                span#prisonerName.bold #{prisoner.firstName} #{prisoner.lastName}
 
             li.padRight30.block Prison Number&nbsp;&nbsp;
-                span.bold #{nomisId}
+                span#prisonerPrisonNumber.bold #{nomisId}
 
             li.block Date of birth&nbsp;&nbsp;
-                span.bold #{prisoner.dateOfBirth}
+                span#prisonerDob.bold #{prisoner.dateOfBirth}
