--- a/server/views/review/curfewAddress.pug
+++ b/server/views/review/curfewAddress.pug
@@ -5,17 +5,17 @@ block content
     - var errorsOnPage = Object.keys(errorObject).length !== 0;
     - var addressChanged = licenceStatus.stage === 'PROCESSING_CA' && licenceStatus.tasks.curfewAddressReview === 'UNSTARTED';
 
-    include ../includes/backToTaskList
+    include ../includes/back
 
     if errorsOnPage
         div.error-summary(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
             h2.heading-medium.error-summary-heading.center.noMargin#error-summary-heading
                 | There are unanswered questions - see below
 
-    h1.heading-large Proposed address
+    h1.heading-large Check the information before submitting the case
     div.largeMarginBottom
 
-        include ../taskList/prisonerDetails
+        include ../includes/personalDetailsSummary
 
         div.pure-g.borderBottomLight
             div.pure-u-md-1-2
