--- a/server/views/review/licence.pug
+++ b/server/views/review/licence.pug
@@ -1,9 +1,12 @@
+//- Read only licence view eg from caselist when case is with a different role
 extends ../layout
 
 block content
 
     include ../includes/back
 
+    h1.heading-large Licence details
+    include ../taskList/prisonerDetails
     include includes/licenceSummary
 
     include ../includes/caseListReturn
