--- a/server/views/eligibility/includes/excluded.pug
+++ b/server/views/eligibility/includes/excluded.pug
@@ -4,7 +4,7 @@ block excludedForm
 
     p Select one or more reasons why the offender is excluded:
         if errorObject.reason
-            span.error-message Select one or more reasons
+            span.error-message #{errorObject.reason}
     div.pure-g
         div.pure-u-10-24
             div.multiple-choice
