--- a/server/views/proposedAddress/optOut.pug
+++ b/server/views/proposedAddress/optOut.pug
@@ -6,16 +6,13 @@ block content
     div.pure-g.pure-u-1
         include ../includes/back
         include ../includes/personalDetailsSummary
-        +errorBannerWithDetail(errorObject, [
-            {field: 'decision', message: 'Select yes or no'},
-            {field: 'reason', message: 'Explain why they opted out'}
-        ])
+        +errorBannerWithDetail(errorObject, [{field: 'decision'}, {field: 'reason'}])
 
         div.pure-u-1-2
             h2.heading-large Has the offender decided to opt out of the HDC process?
 
             if errorObject.decision
-                p.error-message Select yes or no
+                p.error-message #{errorObject.decision}
             form(method="post")
                 input(type="hidden" name="_csrf" value=csrfToken)
                 input(type="hidden" name="nomisId" value=nomisId || '')
@@ -33,7 +30,7 @@ block content
                         div#optOutForm(class=errorObject.reason ? 'form-group-error': 'panel panel-border-narrow js-hidden')
                             label(for='optOutDetails') Please give details
                                 if errorObject.reason
-                                    span.error-message Explain why they opted out
+                                    span.error-message #{errorObject.reason}
                             textarea(name='reason' id='optOutDetails' class='form-control' rows='4')
                                 if data && data.reason
                                     | #{data.reason}
